# N2TCompilerOS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project_notes.md  test.txt
.devcontainer/: devcontainer.json
OSLib/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
__input__/: BasicTest.vm
__output__/asm/: BasicTest.asm
__output__/hack/: BasicTest.hack
include/: AssemblyFileParser.hpp  FileParser.hpp  FullCompiler.hpp  parser.hpp
include/Emulators/: FileLoader.hpp
include/Emulators/HackEmulator/: FileLoader.hpp  HackEmulator.hpp
include/Emulators/VMEmulator/: SymbolTable.hpp  VMEmulator.hpp  VMParser.hpp
include/HackAssembler/: AssemblerConfig.hpp  AssemblyCommandParser.hpp  CodeTable.hpp  HackAssembler.hpp  ListingFileWriter.hpp  SymbolTable.hpp
include/JackCompiler/: CodeGenerator.hpp  Commontypes.hpp  CompilationEngine.hpp  JackParser.hpp  JackSpec.hpp  SemanticAnalyzer.hpp  SymbolTable.hpp  SymbolTableBuiltInBuilder.hpp  VMWriter.hpp
include/JackCompiler/IR/: ExpressionIR.hpp  HighLevelIR.hpp  StatementIR.hpp
include/Tokenizer/: Token.hpp  TokenTypes.hpp  TokenValidator.hpp  Tokenizer.hpp  TokenizerSpec.hpp
include/VMTranslator/: VMCodeWriter.hpp  VMCommandParser.hpp  VMSpecifications.hpp  VMSpecififcations.hpp  VMTranslator.hpp
src/: AssemblyFileParser.cpp  FileParser.cpp  FullCompiler.cpp  parser.cpp
src/Emulators/: FileLoader.cpp
src/Emulators/HackEmulator/: FileLoader.cpp  HackEmulator.cpp
src/Emulators/VMEmulator/: SymbolTable.cpp  VMEMulator.cpp  VMEmulator.cpp  VMParser.cpp
src/HackAssembler/: AssemblyCommandParser.cpp  CodeTable.cpp  HackAssembler.cpp  ListingFileWriter.cpp  SymbolTable.cpp
src/JackCompiler/: CodeGenerator.cpp  CompilationEngine.cpp  JackParser.cpp  JackSpec.cpp  SemanticAnalyzer.cpp  VMWriter.cpp
src/JackCompiler/IR/: HighLevelIR.cpp
src/Tokenizer/: Token.cpp  TokenTypes.cpp  TokenValidator.cpp  Tokenizer.cpp
src/VMTranslator/: VMCodeWriter.cpp  VMCommandParser.cpp  VMSpecifications.cpp  VMTranslator.cpp
test/: parser_test.cpp
test/Emulators/HackEmulator/: FileLoaderTest.cpp  HackEmulatorTest.cpp
test/Emulators/HackEmulator/TestFiles/: test.hack
test/Emulators/HackEmulator/integration/: HackEmulator_test.cpp
test/Emulators/HackEmulator/integration/TestCases/BasicLoop/: BasicLoop.hack
test/Emulators/HackEmulator/integration/TestCases/BasicTest/: BasicTest.hack
test/Emulators/HackEmulator/integration/TestCases/FibonacciElement/: FibonacciElement.asm
test/Emulators/HackEmulator/integration/TestCases/PointerTest/: PointerTest.hack
test/Emulators/HackEmulator/integration/TestCases/Project8/Function Calls/FibonacciElement/: FibonacciElement.hack
test/Emulators/HackEmulator/integration/TestCases/Project8/Function Calls/NestedCall/: Sys.hack
test/Emulators/HackEmulator/integration/TestCases/Project8/Function Calls/SimpleFunction/: SimpleFunction.hack
test/Emulators/HackEmulator/integration/TestCases/Project8/Function Calls/StaticsTest/: StaticsTest.hack
test/Emulators/HackEmulator/integration/TestCases/Project8/Program Flow/FibonacciSeries/: FibonacciSeries.hack
test/Emulators/HackEmulator/integration/TestCases/StackTest/: StackTest.hack
test/Emulators/HackEmulator/integration/TestCases/StaticTest/: StaticTest.hack
test/Emulators/VMEmulator/: ArithmeticTest.cpp  DecodeTest.cpp  PushPopArithmeticTest.cpp  PushPopTest.cpp
test/Emulators/VMEmulator/integration/: VMEmulatorTest.cpp
test/HackAssembler/: AssemblyCommandParser_test.cpp  CodeTable_test.cpp  SymbolTable_test.cpp
test/HackAssembler/integration/: hackAssemblerIntegration.cpp
test/HackAssembler/integration/generatedOutput/add/: Add.hack  Add_listing.txt
test/HackAssembler/integration/generatedOutput/max/: MaxL_listing.txt  Max_listing.txt
test/HackAssembler/integration/generatedOutput/pong/: PongL_listing.txt  Pong_listing.txt
test/HackAssembler/integration/generatedOutput/rect/: RectL_listing.txt  Rect_listing.txt
test/JackCompiler/: JackParserClassVarDec_test.cpp  JackParserExpressionTerm_test.cpp  JackParserStatements_test.cpp  JackParser_test.cpp  SemanticAnalyzer_test.cpp  Tokenizer_test.cpp
test/VMTranslator/: VMCommandParser_test.cpp
